--- a/hrms-client/src/App.css
+++ b/hrms-client/src/App.css
@@ -1,5 +1,13 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .App {
+  display: flex;
   text-align: center;
+  min-height: 100vh;
 }
 
 .App-logo {
