--- a/hrms-client/src/component/login/login.scss
+++ b/hrms-client/src/component/login/login.scss
@@ -1,6 +1,7 @@
 
 .login {
     height: 100vh;
+    width: 100%;
     background-repeat: no-repeat !important;
     background-position: center !important;
     background-size: cover !important;
@@ -17,7 +18,7 @@
         right:0;
         bottom:0;
         margin:auto;
-        border-radius: 20px;
+        //border-radius: 20px;
         height: 100%;
     }
 }
@@ -59,7 +60,7 @@
         background: #c0dbea;
         height: 100%;
         right: 0;
-        border-radius: 40px 20px 20px 40px;
+        border-radius: 24px 0 0 24px;
     }
 }
 
