--- a/hrms-client/src/component/login/login.scss
+++ b/hrms-client/src/component/login/login.scss
@@ -127,6 +127,13 @@
         cursor:pointer;
     }
 }
+.login-button{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+
+}
 
 .all-link{
     display: flex;
