API Intercepter and loading spinner

--- a/hrms-client/src/component/Header/header.scss
+++ b/hrms-client/src/component/Header/header.scss
@@ -2,11 +2,11 @@ header {
   //display: flex;
   flex-direction: row;
   justify-content: space-between;
-  //img {
-  //  width: 64px;
-  //  height: 64px;
-  //}
 
+  img {
+    width: 64px;
+    height: 64px;
+  }
 
   .header-buttons {
     display: flex;
