--- a/hrms-client/src/component/user/user.scss
+++ b/hrms-client/src/component/user/user.scss
@@ -2,8 +2,8 @@
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.25);
   color: #eceff1;
   border-radius: 5px;
-  display: 'flex';
-  flex-direction: 'column';
+  display: flex;
+  flex-direction: column;
   width: 100%;
   max-width: 450px;
   align-items: center;
