--- a/hrms-client/src/component/login/login.scss
+++ b/hrms-client/src/component/login/login.scss
@@ -1,6 +1,6 @@
 
 .login {
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
     background-repeat: no-repeat !important;
     background-position: center !important;
@@ -10,57 +10,79 @@
 
     .loginPage{
         position: absolute;
-        //width:1200px;
-        //max-height: 600px;
-        background: white;
-        top: 0;
-        left:0;
-        right:0;
-        bottom:0;
-        margin:auto;
-        //border-radius: 20px;
-        height: 100%;
+        top: 10vh;
+        left: 10vw;
+        right: 10vw;
+        //bottom: 20vh;
+        //margin: auto;
+
+        //height: 100%;
+
+        max-width: 1440px;
     }
 }
 
 .loginPageDetail{
     display:flex;
     height: 100%;
+    border-radius: 24px;
+    overflow: hidden;
+    background: white;
 }
 
 .right{
     position:relative;
     width:50%;
 
+    .girl-cactus{
+        //position: absolute;
+        //right: 0;
+        width: 60%;
+        margin-left: auto;
+        background: #c0dbea;
+        height: 100%;
+        border-radius: 24px;
+    }
+
     .girl{
         position: absolute;
-        background-repeat: no-repeat !important;
-        background-position: center !important;
-        background-size: contain !important;
-        width: 100%;
-        height: 92%;
-        right: 20px;
-        top: 85px;
+        right: 35%;
+        bottom: 0;
+        //right: 20px;
+        //top: 85px;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        width: 320px;
+        height: 400px;
+        z-index: 2;
+        //border: 0.5px solid black;
     }
 
     .cactus{
         position: absolute;
-        background-repeat: no-repeat !important;
-        background-position: center !important;
-        background-size: contain !important;
-        width: 30%;
-        height: 72%;
-        right: 110px;
-        bottom: 0;
+        right: 28%;
+        bottom: 32px;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        width: 140px;
+        height: 320px;
+        z-index: 1;
+        //border: 0.5px solid black;
     }
 
-    .girl-cactus{
-        position: absolute;
-        width: 62%;
-        background: #c0dbea;
-        height: 100%;
-        right: 0;
-        border-radius: 24px 0 0 24px;
+    @media (min-width: 768px) and (max-width: 992px) {
+        .girl {
+            width: 230px;
+            height: 350px;
+        }
+
+        .cactus {
+            width: 120px;
+            height: 250px;
+            right: 23%;
+        }
     }
 }
 
@@ -89,7 +111,8 @@
 }
 
 .login-here{
-   margin: 35px 120px 0 80px;
+    padding: 48px 0 48px 48px;
+   //margin: 35px 120px 0 80px;
 
     h2{
         color:#e2a7bd;
@@ -127,6 +150,7 @@
         cursor:pointer;
     }
 }
+
 .login-button{
     width: 100%;
     display: flex;
@@ -137,8 +161,9 @@
 
 .all-link{
     display: flex;
-    gap: 10px;
+    gap: 24px;
     flex-wrap: wrap;
+    max-width: 80%;
     justify-content: center;
 
     button{
