--- a/hrms-client/src/component/side navbar/navbar.scss
+++ b/hrms-client/src/component/side navbar/navbar.scss
@@ -1,3 +1,51 @@
+.demo-logo-vertical {
+  min-height: 64px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+aside.ant-layout-sider {
+  background: linear-gradient(135deg, #665DCD 0%, #5FA4E6 44.76%) !important;
+}
+
+aside {
+  //position: absolute !important;
+  //top: 0;
+  //bottom: 0;
+  //left: 0;
+  flex: 0 0 80px !important;
+  width: 80px !important;
+  max-width: 80px !important;
+  min-width: 80px !important;
+  height: 100%;
+
+  &:hover {
+    flex: 0 0 200px !important;
+    width: 200px !important;
+    max-width: 200px !important;
+    min-width: 200px !important;
+  }
+}
+
+.ant-menu-dark, .ant-menu-dark>.ant-menu {
+  background: unset !important;
+}
+
+.ant-menu-dark.ant-menu-inline .ant-menu-sub.ant-menu-inline {
+  background: unset !important;
+}
+
+//.ant-layout-sider-children {
+//
+//}
+
+.ant-layout-sider-trigger {
+  background: unset !important;
+  width: unset !important;
+  display: none;
+}
+
 .ant-layout.ant-layout-has-sider {
   .ant-layout-sider-trigger {
     position: relative;
