home page cards and side navbar

--- a/hrms-client/src/component/Practice/tempFile.scss
+++ b/hrms-client/src/component/Practice/tempFile.scss
@@ -1,7 +1,7 @@
 main {
   > .ant-layout.css-dev-only-do-not-override-dkbvqv {
-    max-width: 80vw;
-    margin: 48px 48px 48px auto;
+    //max-width: 80vw;
+    //margin: 48px 48px 48px auto;
 
     .ant-table-wrapper {
       max-width: unset;
