--- a/hrms-client/src/component/user data table/userDataTable.scss
+++ b/hrms-client/src/component/user data table/userDataTable.scss
@@ -4,9 +4,14 @@
   font-size: 12px;
 }
 
-main {
-  .ant-layout {
-    max-width: 80vw;
-    margin: 48px 48px 48px auto;
-  }
+//main {
+//  .ant-layout {
+//    max-width: 80vw;
+//    margin: 48px 48px 48px auto;
+//  }
+//}
+
+.user-data-table {
+  max-width: 80vw;
+  margin: 48px 48px 48px auto;
 }
