--- a/hrms-client/src/component/Header/header.scss
+++ b/hrms-client/src/component/Header/header.scss
@@ -9,11 +9,14 @@ header {
   //}
 
   &.ant-layout-header {
+    position: sticky;
+    top: 0;
+    z-index: 1;
     background: linear-gradient(135deg, #665DCD 0%, #5FA4E6 44.76%) !important;
   }
 
   .ant-row {
-    justify-content: flex-end;
+    justify-content: space-between;
     height: 100%;
 
     //button.signup {
