--- a/hrms-client/src/component/side navbar/navbar.scss
+++ b/hrms-client/src/component/side navbar/navbar.scss
@@ -17,6 +17,7 @@ aside {
   //top: 0;
   //bottom: 0;
   //left: 0;
+  z-index: 5;
   flex: 0 0 80px !important;
   width: 80px !important;
   max-width: 80px !important;
