--- a/hrms-client/src/component/user data table/userDataTable.scss
+++ b/hrms-client/src/component/user data table/userDataTable.scss
@@ -4,14 +4,36 @@
   font-size: 12px;
 }
 
-//main {
-//  .ant-layout {
-//    max-width: 80vw;
-//    margin: 48px 48px 48px auto;
-//  }
-//}
-
 .user-data-table {
-  max-width: 80vw;
-  margin: 48px 48px 48px auto;
+  max-width: 85vw;
+  margin: 40px 60px 40px auto;
+
+  .ant-table-content {
+    max-height: 450px;
+    overflow-x: hidden;
+    overflow-y: scroll;
+  }
+
+  thead.ant-table-thead {
+    position: sticky;
+    top: 0;
+    z-index: 1;
+  }
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2);
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+::-webkit-scrollbar {
+  width: 4px;
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #FFF;
+  background-image: linear-gradient(180deg, #665DCD 10%, #5FA4E6 100%);
 }
