--- a/hrms-client/src/component/form/formComponent.scss
+++ b/hrms-client/src/component/form/formComponent.scss
@@ -2,6 +2,7 @@
   width: 80%;
   margin: 20px auto;
 }
+
 input{
   //outline: none !important;
   //border-width: 0 0 2px !important;
@@ -24,6 +25,7 @@ input{
   //  box-shadow: none !important;
   //}
   height: 40px !important;
+  text-align: left;
 }
 .ant-picker{
   //outline: none !important;
@@ -40,7 +42,8 @@ label{
   font-size: 16px !important;
   font-weight: 600 !important;
   color: #A6A490 !important;
-  width:140px;
+  width:200px;
+  text-align: left;
 }
 .Experience{
   &_detail{
@@ -49,3 +52,47 @@ label{
   }
 
 }
+.ant-steps-vertical .ant-steps-item{
+  height: 100px;
+  max-height: 100px;
+  min-height: 100px;
+  &:last-child{
+    height: 0;
+    max-height: 0;
+    min-height: 0;
+  }
+}
+.ant-form-item-explain-error{
+  text-align: left;
+}
+.Experience{
+  overflow-y: scroll;
+  height: 580px;
+
+
+}
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2);
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+::-webkit-scrollbar {
+  width: 4px;
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #FFF;
+  background-image: linear-gradient(180deg, #665DCD 10%, #5FA4E6 100%);
+}
+//.ant-form .ant-form-horizontal::-webkit-scrollbar-track {
+//  background: orange;        /* color of the tracking area */
+//}
+//
+//.ant-form .ant-form-horizontal::-webkit-scrollbar-thumb {
+//  background-color: blue;    /* color of the scroll thumb */
+//  border-radius: 20px;       /* roundness of the scroll thumb */
+//  border: 3px solid orange;  /* creates padding around scroll thumb */
+//}
