Navbar fixes and Input design

--- a/hrms-client/src/component/home/home.scss
+++ b/hrms-client/src/component/home/home.scss
@@ -33,11 +33,14 @@
 
     .ant-card-body {
       min-height: 200px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
     .user-count {
       position: relative;
-      font-size: 18px;
+      font-size: 40px;
       font-weight: 700;
       color: white;
     }
