--- a/hrms-client/src/component/user data table/userDataTable.scss
+++ b/hrms-client/src/component/user data table/userDataTable.scss
@@ -19,6 +19,14 @@
     top: 0;
     z-index: 1;
   }
+
+  .ant-page-header {
+    //padding: unset;
+
+    .ant-page-header-heading-left {
+      margin: 0 0 16px 0;
+    }
+  }
 }
 
 ::-webkit-scrollbar-track {
