--- a/hrms-client/src/index.css
+++ b/hrms-client/src/index.css
@@ -37,3 +37,29 @@ body::-webkit-scrollbar-thumb {
   background-color: #FFF;
   background-image: linear-gradient(135deg, #5FA4E6 25%, #665DCD 40%);
 }
+
+.ant-input {
+  border-radius: 4px !important;
+  border-left: 5px solid #1677ff !important;
+}
+
+.ant-select-selector {
+  border-radius: 4px !important;
+  border-left: 5px solid #1677ff !important;
+}
+
+.ant-form-item-control-input {
+
+}
+
+.ant-input-affix-wrapper {
+  padding: 0 11px 0 0;
+}
+
+.ant-input-status-error:not(.ant-input-disabled):not(.ant-input-borderless).ant-input {
+  border-left: 5px solid #ff4d4f !important;
+}
+
+.ant-input-affix-wrapper-status-error.ant-input-affix-wrapper > input {
+  border-left: 5px solid #ff4d4f !important;
+}
