--- a/hrms-client/src/component/header/header.scss
+++ b/hrms-client/src/component/header/header.scss
@@ -33,10 +33,11 @@ header {
     color: white;
     background: transparent;
     border-radius: 4px;
+    border-width: 2px;
 
     &:hover {
       color: white !important;
-      border: 1px solid #665DCD !important;
+      border: 2px solid #665DCD !important;
     }
   }
 }
