--- a/hrms-client/src/index.css
+++ b/hrms-client/src/index.css
@@ -48,12 +48,21 @@ body::-webkit-scrollbar-thumb {
   border-left: 5px solid #1677ff !important;
 }
 
+.ant-picker.css-dev-only-do-not-override-dkbvqv {
+  border-left: 5px solid #1677ff !important;
+}
+
 .ant-form-item-control-input {
 
 }
 
 .ant-input-affix-wrapper {
   padding: 0 11px 0 0;
+}
+
+.ant-select.ant-select-in-form-item {
+  width: 100%;
+  height: 100%;
 }
 
 .ant-input-status-error:not(.ant-input-disabled):not(.ant-input-borderless).ant-input {
@@ -63,6 +72,16 @@ body::-webkit-scrollbar-thumb {
 .ant-input-affix-wrapper-status-error.ant-input-affix-wrapper > input {
   border-left: 5px solid #ff4d4f !important;
 }
+
+.ant-picker.ant-picker-status-error.css-dev-only-do-not-override-dkbvqv {
+  border-left: 5px solid #ff4d4f !important;
+}
+
+.ant-select.ant-select-in-form-item.ant-select-status-error > .ant-select-selector {
+  border-left: 5px solid #ff4d4f !important;
+}
+
+
 
 footer.ant-layout-footer {
   color: white;
