--- a/hrms-client/src/component/employee/employeeSearch.scss
+++ b/hrms-client/src/component/employee/employeeSearch.scss
@@ -11,4 +11,52 @@
     .ant-picker {
         width: 100%;
     }
+    :where(.css-dev-only-do-not-override-dkbvqv).ant-select-single:not(.ant-select-customize-input) .ant-select-selector {
+        width: 220px; //for select box width
+    }
+    .ant-select ant-select-in-form-item css-dev-only-do-not-override-dkbvqv ant-select-single ant-select-show-arrow{
+        width: 200px;
+    }
+    :where(.css-dev-only-do-not-override-dkbvqv).ant-select.ant-select-in-form-item{
+        width: 200px;
+    }
+    :where(.css-dev-only-do-not-override-dkbvqv).ant-form-item .ant-form-item-control-input-content{
+        flex: unset;
+    }
+    .ant-picker {
+        width: 187px;
+
+    }
+    .ant-select-show-arrow{
+        width: 200px;
+    }
+.ant-select ant-select-in-form-item css-dev-only-do-not-override-dkbvqv ant-select-single ant-select-show-arrow{
+    width: 200px;
+}
+.ant-form-item-required{
+    width: 150px;
+}
+// :where(.css-dev-only-do-not-override-dkbvqv).ant-input:placeholder-shown {
+//     width: 245px;
+// }
+    
+:where(.css-dev-only-do-not-override-dkbvqv).ant-form-item .ant-form-item-label >label {
+    width: 170px;
+}
+#advanced_search_name {
+    width: 220px;
+
+}
+
+.search-result-list {
+    color: black;
+    margin-top: 50px;
+    border: 1px dashed #e9e9e9;
+    border-radius: 2px;
+    background-color: #fafafa;
+    min-height: 200px;
+    text-align: center;
+    padding-top: 40px;
+  }
+
 }
