fix issue about search employee updated data

--- a/hrms-client/src/component/employee/employeeSearch.scss
+++ b/hrms-client/src/component/employee/employeeSearch.scss
@@ -4,7 +4,7 @@
 
     .title-heading{
         color: black;
-        padding:  20px 5px;
+        padding:  10px 5px;
         text-align: center;
     }
 
@@ -57,6 +57,10 @@
     min-height: 200px;
     text-align: center;
     padding-top: 40px;
+  }
+  hr{
+    margin-top: 20px;
+    color: rgba(0, 0, 0, .1);
   }
 
 }
