--- a/hrms-client/src/component/header/header.scss
+++ b/hrms-client/src/component/header/header.scss
@@ -34,6 +34,8 @@ header {
     background: transparent;
     border-radius: 4px;
     border-width: 2px;
+    height: unset;
+    padding: 4px 24px;
 
     &:hover {
       color: white !important;
