simplyfy code and remove user signup popup

--- a/hrms-client/src/component/employee/employeeSearch.scss
+++ b/hrms-client/src/component/employee/employeeSearch.scss
@@ -4,8 +4,10 @@
 
     .title-heading{
         color: black;
-        padding:  10px 5px;
         text-align: center;
+        font-size: 30px;
+        line-height: 36px;
+        margin-bottom: 40px;
     }
 
     .ant-picker {
