--- a/hrms-client/src/component/user/userCreate.scss
+++ b/hrms-client/src/component/user/userCreate.scss
@@ -1,9 +1,9 @@
 .user-create-section {
-  max-width: 85vw;
-  margin: 40px auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  //max-width: 85vw;
+  //margin: 40px auto;
+  //display: flex;
+  //flex-direction: column;
+  //align-items: center;
 
   .user-create-form {
 
