--- a/hrms-client/src/component/employee/employeeSearch.scss
+++ b/hrms-client/src/component/employee/employeeSearch.scss
@@ -1,6 +1,6 @@
 .employee-search {
-    max-width: 85vw;
-    margin: 40px 60px 40px auto;
+    //max-width: 85vw;
+    //margin: 40px 60px 40px auto;
 
     .title-heading {
         color: black;
