--- a/hrms-client/src/component/user data table/userDataTable.scss
+++ b/hrms-client/src/component/user data table/userDataTable.scss
@@ -22,7 +22,7 @@
     //padding: unset;
 
     .ant-page-header-heading-left {
-      margin: 0 0 16px 0;
+      //margin: 0 0 16px 0;
     }
   }
 }
