--- a/hrms-client/src/component/employee/employeeSearch.scss
+++ b/hrms-client/src/component/employee/employeeSearch.scss
@@ -2,12 +2,8 @@
     //max-width: 85vw;
     //margin: 40px 60px 40px auto;
 
-    .title-heading {
-        color: black;
-        text-align: center;
-        font-size: 30px;
-        line-height: 36px;
-        margin-bottom: 40px;
+    #advanced_search {
+        margin-top: 30px;
     }
 
     .ant-picker {
