--- a/hrms-client/src/component/forgottenPassword/forgottenPassword.scss
+++ b/hrms-client/src/component/forgottenPassword/forgottenPassword.scss
@@ -1,9 +1,23 @@
 .forgotten-password-container {
-    max-width: 1056px !important;
-    margin: 100px auto 0 !important;
-    input{
-        width: 300px;
-    }
+    // max-width: 1056px !important;
+    // margin: 100px auto 0 !important;
+    margin-top: 60px;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: row;
+
+    // .forgot-password-logo{
+    //     width: 60%;
+    //     height: 100%;
+    //     background-color: rgb(232, 234, 234);
+    // }
+    // .forget-password-content-container{
+
+    // }
+    // input{
+    //     width: 300px;
+    // }
     .display-none{
         display: none;
     }
