--- a/hrms-client/src/component/forgottenPassword/forgottenPassword.scss
+++ b/hrms-client/src/component/forgottenPassword/forgottenPassword.scss
@@ -1,3 +1,8 @@
+.outer-section-forgotten-passsword{
+    display:"flex";
+    flex-direction:'row'
+}
+
 .forgotten-password-container {
     // max-width: 1056px !important;
     // margin: 100px auto 0 !important;
@@ -7,17 +12,12 @@
     display: flex;
     flex-direction: row;
 
-    // .forgot-password-logo{
-    //     width: 60%;
-    //     height: 100%;
-    //     background-color: rgb(232, 234, 234);
-    // }
-    // .forget-password-content-container{
+    .forgot-password-logo{
+        width: 60%;
+        height: 100%;
+        // background-color: rgb(232, 234, 234);
+    }
 
-    // }
-    // input{
-    //     width: 300px;
-    // }
     .display-none{
         display: none;
     }
@@ -27,4 +27,12 @@
     .form-field{
         text-align: center;
     }
+    label {
+        font-size: 16px !important;
+        font-weight: 600 !important;
+        color: #A6A490 !important;
+        width: 100px !important;
+        text-align: left;
+    }
+    
 }
