--- a/hrms-client/src/component/forgottenPassword/forgottenPassword.scss
+++ b/hrms-client/src/component/forgottenPassword/forgottenPassword.scss
@@ -3,36 +3,47 @@
     flex-direction:'row'
 }
 
-.forgotten-password-container {
-    // max-width: 1056px !important;
-    // margin: 100px auto 0 !important;
-    margin-top: 60px;
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    flex-direction: row;
+// .forgotten-password-container {
+//     // max-width: 1056px !important;
+//     // margin: 100px auto 0 !important;
+//     margin-top: 60px;
+//     width: 100vw;
+//     height: 100vh;
+//     display: flex;
+//     flex-direction: row;
 
-    .forgot-password-logo{
-        width: 60%;
-        height: 100%;
-        // background-color: rgb(232, 234, 234);
-    }
+//     .forgot-password-logo{
+//         width: 60%;
+//         height: 100%;
+//         // background-color: rgb(232, 234, 234);
+//     }
 
-    .display-none{
-        display: none;
-    }
-    .titel-heading{
-        text-align: center;
-    }
-    .form-field{
-        text-align: center;
-    }
-    label {
-        font-size: 16px !important;
-        font-weight: 600 !important;
-        color: #A6A490 !important;
-        width: 100px !important;
-        text-align: left;
-    }
+//     .display-none{
+//         display: none;
+//     }
+//     .titel-heading{
+//         text-align: center;
+//     }
+//     .form-field{
+//         text-align: center;
+//     }
+//     label {
+//         font-size: 16px !important;
+//         font-weight: 600 !important;
+//         color: #A6A490 !important;
+//         width: 100px !important;
+//         text-align: left;
+//     }
     
+    
+// }
+.ant-steps{
+    width:18% !important;
+}
+.forgotten-passowrd-container{
+    display: flex !important;
+justify-content: center !important;
+max-width: 1220px !important;
+width: 100% !important;
+margin: 100px auto !important;
 }
