--- a/hrms-client/src/component/side navbar/navbar.scss
+++ b/hrms-client/src/component/side navbar/navbar.scss
@@ -40,10 +40,6 @@ aside {
   background: unset !important;
 }
 
-//.ant-layout-sider-children {
-//
-//}
-
 .ant-layout-sider-trigger {
   background: unset !important;
   width: unset !important;
@@ -63,11 +59,6 @@ aside {
   }
 }
 
-
-.ant-menu-dark .ant-menu-item-selected {
-
-}
-
 .side-navbar {
   .ant-menu-submenu {
     .ant-menu-item {
@@ -81,7 +72,7 @@ aside {
   }
 
   &__button {
-    cursor: pointer;
-    width: 100%;
+    //cursor: pointer;
+    //width: 100%;
   }
 }
