Show user icon and details on Header after Login

--- a/hrms-client/src/component/forgotPassword/forgotPassword.scss
+++ b/hrms-client/src/component/forgotPassword/forgotPassword.scss
@@ -3,11 +3,6 @@
     flex-direction: row;
 }
 
-
-.ant-steps{
-    //width:18% !important;
-}
-
 .forgotten-passowrd-container{
     display: flex !important;
     justify-content: center !important;
@@ -63,6 +58,7 @@
         .ant-row {
             //align-items: center;
             gap: 24px;
+            justify-content: space-between;
         }
 
         .ant-steps.ant-steps-vertical {
@@ -84,5 +80,10 @@
         .ant-form-item label {
             width: fit-content;
         }
+    }
+
+    .ant-form-horizontal .ant-form-item-control {
+        max-width: 250px;
+        width: 250px;
     }
 }
