--- a/hrms-client/src/component/header/header.scss
+++ b/hrms-client/src/component/header/header.scss
@@ -29,7 +29,7 @@ header {
     align-items: center;
   }
 
-  .login-button, .signup-button {
+  .login-button {
     color: white;
     background: transparent;
     border-radius: 4px;
@@ -40,6 +40,7 @@ header {
     &:hover {
       color: white !important;
       border: 2px solid #665DCD !important;
+      box-shadow: 0 0 10px 3px #665dcd40;
     }
   }
 }
