--- a/hrms-client/src/component/login/login.scss
+++ b/hrms-client/src/component/login/login.scss
@@ -38,7 +38,8 @@
     }
 
     &-title-heading {
-        font-size: 42px;
+        font-size: 36px;
+        line-height: 48px;
     }
 
     &-credentials{
@@ -108,7 +109,7 @@
 
             &:hover {
                 background-color: #ff6cae;
-                transition: all 200ms ease-in-out;
+                transition: all 250ms ease-in-out;
             }
         }
     }
