--- a/hrms-client/src/App.scss
+++ b/hrms-client/src/App.scss
@@ -36,6 +36,10 @@
   padding: 0 10px;
   border-left: 5px solid #1677ff !important;
 
+  &.ant-input-affix-wrapper-status-error {
+    border-left: 5px solid #ff4d4f !important;
+  }
+
   .ant-input {
     border-left: 0!important;
   }
